--- a/Rompecabezas/levels/level-2/style-2.css
+++ b/Rompecabezas/levels/level-2/style-2.css
@@ -7,7 +7,7 @@ body {
   padding-top: 1%;
 }
 .tile {
-  background-image: url("/Rompecabezas/img/level-2.png");
+  background-image: url("/img/level-2.png");
   width: 110px;
   height: 110px;
   float: left;
