--- a/Rompecabezas/levels/level-1/style-1.css
+++ b/Rompecabezas/levels/level-1/style-1.css
@@ -7,7 +7,7 @@ body {
   padding-top: 1%;
 }
 .tile {
-  background-image: url("/img/level-1.png");
+  background-image: url("../../img/level-1.png");
   width: 200px;
   height: 200px;
   float: left;
